Bug 124237 - SAL_USE_VCLPLUGIN=kde5 renders everything aliased
Summary: SAL_USE_VCLPLUGIN=kde5 renders everything aliased
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2019-03-21 09:04 UTC by avemilia
Modified: 2019-04-04 06:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
kde5-breeze (89.88 KB, image/png)
2019-03-22 08:53 UTC, Vera Blagoveschenskaya
Details
kde5-breeze-dark (90.73 KB, image/png)
2019-03-22 08:54 UTC, Vera Blagoveschenskaya
Details
kde5 with anti-aliasing disabled in Plasma font settings (27.09 KB, image/png)
2019-03-23 00:11 UTC, Michael Weghorn
Details
kde5 with anti-aliasing enabled in Plasma font settings (50.53 KB, image/png)
2019-03-23 00:15 UTC, Michael Weghorn
Details
breeze_new (88.42 KB, image/png)
2019-04-01 07:17 UTC, Vera Blagoveschenskaya
Details
breeze_dark_new (90.53 KB, image/png)
2019-04-01 07:17 UTC, Vera Blagoveschenskaya
Details

Note You need to log in before you can comment on or make changes to this bug.
Description avemilia 2019-03-21 09:04:20 UTC
Description:
SAL_USE_VCLPLUGIN=kde5 renders everything aliased.

Compare 'kde5' and 'gtk3': <https://i.imgur.com/zIC0pVg.png>, <https://i.imgur.com/VAuFICA.png>.

The bug is first reproducible on 6.2.0.1 and the screenshots were made on 6.2.1.2 -- the latest stable release available at the report time.

6.2 Release notes introduce kde5 switch: <https://wiki.documentfoundation.org/ReleaseNotes/6.2#KDE_5_.2B_Qt5>, so the bug is present since the beginning of this switch.

Toggling 'Use OpenGL for all rendering', 'Use antialiasing', 'Use hardware acceleration', 'Screen font aliasing' does not resolve the issue.
Toggling '

Steps to Reproduce:
1. Download any RPM from official LibreOffice website of version 6.2.0.1 or higher.
2. Extract into LibreOffice_6.2.0.1_Linux_x86-64_rpm.
3. $ cd LibreOffice_6.2.0.1_Linux_x86-64_rpm && ./install RPMS out
4. $ SAL_USE_VCLPLUGIN=kde5 ./out/opt/libreoffice6.2/program/soffice

Actual Results:
All rendered contents except the menu strip are blurry (not antialiased).
<https://i.imgur.com/zIC0pVg.png>

Expected Results:
All rendered contents should be antialiased, like here: <https://i.imgur.com/VAuFICA.png>.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.1.2
Build ID: 7bcb35dc3024a62dea0caee87020152d1ee96e71
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: kde5; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: CL
Comment 1 avemilia 2019-03-21 09:14:48 UTC
Additionally, if you toggle between the two screenshots, there are some differences:
1. The icon is not set (top left corner).
2. The link is too dark, from the wrong theme possibly (or not from the theme at all).
3. The '?' sign says 'Context help', but is useless.
Comment 2 Vera Blagoveschenskaya 2019-03-22 08:53:31 UTC
Hello!
Please look at the screenshots for kde5 breeze (white and dark)

Version: 6.3.0.0.alpha0+
Build ID: a03f421a878c210566dc8d728113a27400da38f2
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-03-16_09:07:41
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

Version: 6.2.3.0.0+
Build ID: 77cc7463bcd3fe9a6528ed1b0309708608cd1cc7
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-6-2, Time: 2019-03-13_11:55:49
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Vera Blagoveschenskaya 2019-03-22 08:53:50 UTC
Created attachment 150172 [details]
kde5-breeze
Comment 4 Vera Blagoveschenskaya 2019-03-22 08:54:07 UTC
Created attachment 150173 [details]
kde5-breeze-dark
Comment 5 Michael Weghorn 2019-03-23 00:11:04 UTC
Created attachment 150219 [details]
kde5 with anti-aliasing disabled in Plasma font settings
Comment 6 Michael Weghorn 2019-03-23 00:15:49 UTC
Created attachment 150220 [details]
kde5 with anti-aliasing enabled in Plasma font settings

Does it look better in other KDE programs in your case, e.g. Kate?

I quickly tested with modifying the "Use anti-aliasing" setting in KDE Plasma's Fonts module in system settings.
The two screenshots with anti-aliasing disabled and enabled there are attached. The setting obviously does at least make a difference.
Comment 7 avemilia 2019-03-23 08:57:33 UTC
This is most certainly not issue with KDE font configuration. In KDE settings, anti-aliasing is set to "vendor default", and my vendor (openSUSE) default is configured via openSUSE settings (YaST).

I don't have any aliasing issues with any other program on the desktop.

Also, running a nightly build master_dbg~2019-03-15_23.07.33_LibreOfficeDev_6.3.0.0.alpha0 I see the icon in the top left corner, so at least that is figured out.
Comment 8 Jan-Marek Glogowski 2019-03-23 16:25:38 UTC
The kde5 backend uses Cairo for rendering, as the QPainter rendering path is still too buggy. See my comment 8 on bug 123072 for more info regarding this.
The menu is a native QMenu and that's the reason why the menu is ok, everything else different (I guess because the referenced menu images are just the same about images). And please attach screenshot directly to your bug reports.

Still there is something strange going on, as it's not just the fonts, but also the LO logo (I guess it's SVG rendered). Normally KDE manages to sync the Gtk and KDE theming settings. And for others like Michael and Vera the KDE settings seem to work correct.

(In reply to avemilia from comment #1)
> Additionally, if you toggle between the two screenshots, there are some
> differences:
> 1. The icon is not set (top left corner).
Already fixed.

> 2. The link is too dark, from the wrong theme possibly (or not from the
> theme at all).
Pending patch in Gerrit to add the missing link color theming. Will be committed after CI has run.

> 3. The '?' sign says 'Context help', but is useless.
I thought the context help title button was quick to fix, but it seems to be some kind of KDE default. For me no main application window has it, but all dialogs in the three KDE applications I checked have it, also unused AFAI can tell / test. There is a Qt::WindowContextHelpButtonHint, but that just works for me, if I completely manage the title bar using Qt::CustomizeWindowHint, which I don't think we should do. But then Gtk apps don't have it for dialogs...
LO doesn't explicitly enables it, but maybe I'm missing something here.
Comment 9 Commit Notification 2019-03-24 00:55:12 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/24f1670927300afb0c9a6e06bdee969b844f2060%5E%21

tdf#124237 Qt5 get link colors from theme

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Weghorn 2019-03-30 20:42:05 UTC
Is this still reproducible with the fix for bug 124292 applied?
Comment 11 Vera Blagoveschenskaya 2019-04-01 07:15:56 UTC
Hello, I've checked with the latest build.

Version: 6.3.0.0.alpha0+
Build ID: 5e30823e8a25066aa7bbaa801583dbfa7db55a72
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-03-31_17:29:00
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

- All rendered contents are antialiased for me (look correct)
- Icon in the top left corner is set
- Link is not too dark

Please look at new screenshots.

The '?' sign says 'Context help', but is useless -> it is still actual.

Should I close this issue as FIXED and create a new one about '?-button' ?
Comment 12 Vera Blagoveschenskaya 2019-04-01 07:17:15 UTC
Created attachment 150437 [details]
breeze_new
Comment 13 Vera Blagoveschenskaya 2019-04-01 07:17:33 UTC
Created attachment 150438 [details]
breeze_dark_new
Comment 14 avemilia 2019-04-01 13:33:27 UTC
The patch by Jan-Marek Glogowski from bug 124292 fixed the aliasing. Thanks! Can be closed. Regarding context help -- feel free to open a new one.
Comment 15 Vera Blagoveschenskaya 2019-04-01 13:35:19 UTC
Verified due to Comment11 and Comment14
Comment 16 Vera Blagoveschenskaya 2019-04-04 06:21:24 UTC
(In reply to avemilia from comment #14)
> The patch by Jan-Marek Glogowski from bug 124292 fixed the aliasing. Thanks!
> Can be closed. Regarding context help -- feel free to open a new one.

New request to enhancement:
https://bugs.documentfoundation.org/show_bug.cgi?id=124541