tdf#124237 Qt5 get link colors from theme

... which includes normal and visited link colors.

Change-Id: Id53850c4700f71d007b59289b135d3c031348f2d
Reviewed-on: https://gerrit.libreoffice.org/69591
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>